<resources>
    <string name="app_name">AndroidFinalProject</string>
    <string name="landingTitle"> ALL-IN-ONE HUB </string>
    <string name="recipe_favItem">My Favorites</string>
    <string name="recipe_addItem">Save This Recipe</string>
    <string name="recipe_deleteItem">Delete This Recipe</string>
    <string name="recipe_backToMainItem">Back To Main</string>
    <string name="recipe_aboutItem">About</string>
    <string name="recipe_helpItem">Help</string>
    <string name="recipe_sampleList">Recipe name goes here</string>
    <string name="recipe_titleText">My Favorites</string>
    <string name="recipe_searchButton">Search</string>
    <string name="recipe_hintText">Type here...</string>
    <string name="recipe_searchTitle">Try One?</string>
    <string name="recipe_sourceButton">Like it? Get details!</string>
    <string name="recipe_summaryTitle">Summary</string>
    <string name="recipe_summaryDetail">Summary</string>
    <string name="recipe_frgTitle">Recipe Name</string>
    <string name="recipe_notFoundToast">Sorry, nothing found</string>
    <string name="recipe_notAvailableToast">This recipe is not available for now</string>
    <string name="recipe_noBrowserToast">No app to handle URL</string>
    <string name="recipe_insertSucceedToast">Recipe saved successfully</string>
    <string name="recipe_alreadyInToast">Recipe already in your list</string>
    <string name="recipe_noSelectedToast">No recipe selected</string>
    <string name="recipe_deleteAlert">Do you want to delete the recipe of </string>
    <string name="recipe_yes">Yes</string>
    <string name="recipe_no">No</string>
    <string name="recipe_undo">Undo</string>
    <string name="recipe_deletedSnackbar">You deleted recipe #</string>
    <string name="recipe_aboutToast">RecipeRover created by Lei Zhao</string>
    <string name="recipe_helpTitle">Use Information</string>
    <string name="recipe_ok">OK</string>
    <string name="recipe_helpAlert">
        Welcome to RecipeRover, here\'s a quick guide for you:\n\n
        1. Search with Ease:
        Type in the name of the dish in the search bar and click on Search button.\n
        Browse through the list of results to find the perfect match for your culinary adventure.\n\n
        2. Explore Recipe Summaries:
        Click on the recipe that catches your eye to view its summary.\n\n
        3. Dive into Details:
        Scroll down and click on the button for all details about this recipe.\n\n
        4. Save for Later:
        Love this recipe? Save it for later by clicking on save icon.\n
        Your saved recipes will be easily accessible whenever you\'re ready to whip up something delicious.\n\n

        Here is how you can navigate in this application:\n\n
        Click on \u2600 go to SunSeeker\n\n
        Click on \uD83C\uDFB5 go to DeezerDiscover\n\n
        Click on \uD83D\uDCD5 go to WordWiz\n\n
        Click on \u2764 go to saved recipes\n\n
        Click on \uD83D\uDCE5 save a recipe\n\n
        Click on \uD83D\uDDD1 ️delete a recipe\n\n</string>
    <string name="recipe_emptyTitle">Find your favorite recipes here!</string>
    <string name="music_favItem">Favorite Music</string>
    <string name="music_addItem">Save This Music</string>
    <string name="music_deleteItem">Delete This Music</string>
    <string name="music_backToMainItem">Back To Main</string>
    <string name="music_aboutItem">About</string>
    <string name="music_helpItem">Help</string>
    <string name="music_sampleList">Music name goes here</string>
    <string name="music_activityTitle">DeezerDiscover</string>
    <string name="music_titleText">Favorite Music</string>
    <string name="music_searchButton">Search</string>
    <string name="music_hintText">Enter artist</string>
    <string name="music_frgTitle">Music Name</string>
    <string name="music_duration">Duration</string>
    <string name="music_albumName">Album Name</string>
    <string name="music_notFoundToast">Sorry,found nothing</string>
    <string name="music_insertSucceedToast">Music saved successfully</string>
    <string name="music_alreadyInToast">Music already in your list</string>
    <string name="music_noSelectedToast">No music selected</string>
    <string name="music_aboutToast">DeezerDiscover created by Zhicheng He</string>
    <string name="music_addTitle">Add your favorite song</string>
    <string name="music_deleteAlert">Do you want to delete the music of</string>
    <string name="music_yes">Yes</string>
    <string name="music_no">No</string>
    <string name="music_undo">Undo</string>
    <string name="music_deleteSnackBar">You deleted music #</string>
    <string name="music_helpDetail">
            Welcome to DeezerDiscover , here\'s a quick guide for you:\n\n
            1. Search Artist:
            Type in the name of the artist in the search bar and click on Search button.\n\n
            2. Dive into Details:
            Scroll down and click on the button for all details about the music of the artist that you search.\n\n
            3. Save for Later:
            Love this music? Save it for later by clicking on save icon.\n
            Your saved music will be easily accessible whenever you\'re ready to listen.\n\n

            Here is how you can navigate in this application:\n\n
            - Click on \u2600 go to SunSeeker\n\n
            - Click on \uD83C\uDF73 go to RecipeRover\n\n
            - Click on \uD83D\uDCD5 go to WordWiz\n\n
            - Click on \u2764 go to saved music\n\n
            - Click on \uD83D\uDCE5 save a music\n\n
            - Click on \uD83D\uDDD1 delete a music\n\n</string>
    <string name="music_helpTitle">How to use me: </string>
    <string name="sun_toolbar_title">Sunrise &amp; Sunset</string>
    <string name="sun_fav">My Favourites</string>
    <string name="sun_title">SunSeeker</string>
    <string name="sun_lat_hint">Latitude: </string>
    <string name="sun_lng_hint">Longitude: </string>
    <string name="sun_lat_text">Latitude</string>
    <string name="sun_lng_text">Longitude</string>
    <string name="sun_search_btn">LOOKUP</string>
    <string name="sun_del_warning_text">Do you want to delete this record: </string>
    <string name="sun_del_warning_title">Question: </string>
    <string name="sun_del_text">Do you want to delete this record: </string>
    <string name="sun_del_title">Question: </string>
    <string name="sun_del_after">You deleted record #</string>
    <string name="sun_yes">Yes</string>
    <string name="sun_no">No</string>
    <string name="sun_about_title">About</string>
    <string name="sun_about_detail">SunSeeker, Version 1.0, created by Yu Song</string>
    <string name="sun_to_main">Back to main page</string>
    <string name="sun_undo">Undo</string>
    <string name="sun_help1">How to use SunSeeker:</string>
    <string name="sun_help2">
    SunSeeker is a program that provides sunrise and sunset information of a location. \n\n
    SunSeeker has two search modes to find sunrise and sunset information: \"by City\" and \"by Latitude and Longitude\".\n\n
    Change search modes by clicking on the switch at the bottom of the screen.\n\n
    \"by City\" mode:\n
    Enter a city name as a location, click CHECK for sunrise and sunset details.\n\n
    \"by Latitude and Longitude\" mode:\n
    Enter Latitude and Longitude, click LOOKUP for sunrise and sunset details.\n\n
    Click on any record in \"My Favourites\" page to refresh and view sun details of a location\n\n
    Click on \u2764 Goto \"My Favourites\".\n\n
    Click on \uD83D\uDCE5 to save this Record.\n\n
    Click on \uD83D\uDDD1 ️to delete this Record.\n\n
    Click on \uD83C\uDF73 Goto RecipeRover.\n\n
    Click on \uD83C\uDFB5 Goto DeezerDiscover.\n\n
    Click on \uD83D\uDCD5 Goto WordWiz.\n
    </string>
    <string name="sun_save_no_record_warning">No sun record selected</string>
    <string name="sun_save_dupe_record_warning">Sun record already in your Favourite</string>
    <string name="sun_save_success">Sun saved successfully</string>
    <string name="sunrise_title">🌄 Sunrise</string>
    <string name="sunset_title">🌅 Sunset</string>
    <string name="solar_noon_title">Solar Noon ☀️</string>
    <string name="golden_hour_title">Golden Hour 🌇</string>
    <string name="timezone_title">🌍 Timezone</string>
    <string name="invalid_input_title">Invalid Input</string>
    <string name="valid_input_lat">Valid Latitude Range: -90 to +90</string>
    <string name="valid_input_lng">Valid Longitude Range: -180 to +180</string>
    <string name="sun_refresh">🔄</string>
    <string name="sun_find_city">City name</string>
    <string name="sun_check">CHECK</string>
    <string name="sun_no_name_location">XYZ Location</string>
    <string name="sun_found_nothing">Found nothing, Array length = 0</string>
    <string name="sun_sun_api_status_not_ok">Sunrise sunset API status not OK</string>
    <string name="sun_sun_api_ok">Sun API Results and Status OK</string>
    <string name="sun_sun_api_not_available">The Sun API is not available now</string>
    <string name="sun_no_input">Please enter valid latitude and longitude</string>
    <string name="sun_switch_left">by City</string>
    <string name="sun_switch_right">by Latitude &amp; Longitude</string>
    <string name="sun_invalid_city">Invalid input, make sure to input valid city name.</string>
    <string name="sun_invalid_lat_lng">Invalid input, make sure to input valid latitude and longitude.</string>
    <string name="sun_try_again">Service unavailable, please try again later</string>
    <string name="dict_titleText">Dictionary</string>
    <string name="dict_hintText">Enter your word here</string>
    <string name="dict_searchTitle">Search</string>
    <string name="dict_frgTitle">Word</string>
    <string name="dict_summaryDetail">Definitions</string>
    <string name="dict_sampleList">Definition List</string>
    <string name="dict_favItem">Saved words definitions</string>
    <string name="dict_deleteItem">Remove from database</string>
    <string name="dict_addItem">Save to database</string>
    <string name="dict_backToMainItem">Go to main page</string>
    <string name="dict_helpItem">Help</string>
    <string name="dict_aboutItem">About</string>
    <string name="dict_notFoundToast">Sorry, nothing found.</string>
    <string name="dict_notAvailableToast">This word is not available.</string>
    <string name="dict_noBrowserToast">No app to handle URL.</string>
    <string name="dict_insertSucceedToast">Word saved.</string>
    <string name="dict_alreadyInToast">Word has already been saved.</string>
    <string name="dict_noSelectedToast">No word was selected.</string>
    <string name="dict_deleteAlert">Do you want to delete this word?</string>
    <string name="dict_yes">Yes</string>
    <string name="dict_no">No</string>
    <string name="dict_undo">Undo</string>
    <string name="dict_deletedSnackbar">You deleted the word. </string>
    <string name="dict_aboutToast">Dictionary created by Yuling Guo</string>
    <string name="dict_helpTitle">Instruction: </string>
    <string name="dict_ok">OK</string>
</resources>