<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_secondary"
    android:orientation="vertical"
    tools:context=".dictionary.DictActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dictToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/searchFragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dictRecycleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/dictTextInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dictTitleText"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/dictTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dict_titleText"
                android:background="@color/pink"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dictTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/dict_hintText"
                android:inputType="text"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dictSearchButton"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/dictSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dict_searchTitle"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>