<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_secondary">

    <TextView
        android:id="@+id/sun_date_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Date"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/date/ddmmyy" />

    <TextView
        android:id="@+id/sun_time_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Time"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="@+id/sun_date_detail_title"
        app:layout_constraintStart_toStartOf="@+id/sun_date_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/sun_date_detail_title" />

    <TextView
        android:id="@+id/sun_sunrise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/sunrise_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sun_time_detail_title" />

    <TextView
        android:id="@+id/sun_noon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/solar_noon_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_sunrise_title"
        app:layout_constraintTop_toBottomOf="@+id/sun_sunrise_title" />

    <TextView
        android:id="@+id/sun_golden_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/golden_hour_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_noon_title"
        app:layout_constraintTop_toBottomOf="@+id/sun_noon_title" />

    <TextView
        android:id="@+id/sun_sunset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sunset_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_golden_title"
        app:layout_constraintTop_toBottomOf="@+id/sun_golden_title" />

    <TextView
        android:id="@+id/sun_timezone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/timezone_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_sunset_title"
        app:layout_constraintTop_toBottomOf="@+id/sun_sunset_title" />


    <TextView
        android:id="@+id/sun_sunrise_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="sunrise"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/sun_sunrise_title"
        app:layout_constraintStart_toEndOf="@+id/sun_sunrise_title"
        app:layout_constraintTop_toTopOf="@+id/sun_sunrise_title" />

    <TextView
        android:id="@+id/sun_noon_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="solar_noon"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_sunrise_detail"
        app:layout_constraintTop_toBottomOf="@+id/sun_sunrise_detail" />

    <TextView
        android:id="@+id/sun_golden_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="golder_hour"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_noon_detail"
        app:layout_constraintTop_toBottomOf="@+id/sun_noon_detail" />

    <TextView
        android:id="@+id/sun_sunset_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="sunset"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_golden_detail"
        app:layout_constraintTop_toBottomOf="@+id/sun_golden_detail" />

    <TextView
        android:id="@+id/sun_timezone_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="timezone"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_sunset_detail"
        app:layout_constraintTop_toBottomOf="@+id/sun_sunset_detail" />

    <EditText
        android:id="@+id/sun_locationName_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="Location"
        app:layout_constraintStart_toStartOf="@+id/sun_timezone_detail"
        app:layout_constraintTop_toBottomOf="@+id/sun_timezone_detail" />

    <TextView
        android:id="@+id/sun_locationName_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Name it"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/sun_timezone_title"
        app:layout_constraintTop_toBottomOf="@+id/sun_timezone_title" />

</androidx.constraintlayout.widget.ConstraintLayout>